--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
+    "highlight.js": "^9.12.0",
     "html-webpack-plugin": "^2.30.1",
     "lru-cache": "^4.1.1",
     "marked": "^0.3.16",
