--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-minify-webpack-plugin": "^0.3.0",
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
     "highlight.js": "^9.12.0",
