--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
+    "uglifyjs-webpack-plugin": "^1.2.0",
     "vue": "^2.5.13",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
