--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "highlight.js": "^9.12.0",
     "html-webpack-plugin": "^2.30.1",
     "lru-cache": "^4.1.1",
-    "marked": "^0.3.16",
+    "markdown-it": "^8.4.1",
+    "markdown-it-highlightjs": "^3.0.0",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "query-string": "^5.1.0",
