--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html-webpack-plugin": "^2.30.1",
     "lru-cache": "^4.1.1",
     "markdown-it": "^8.4.1",
+    "markdown-it-footnote": "^3.0.1",
     "markdown-it-github-toc": "^3.2.4",
     "markdown-it-highlightjs": "^3.0.0",
     "node-sass": "^4.7.2",
