--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-github-toc": "^3.2.4",
     "markdown-it-highlightjs": "^3.0.0",
+    "markdown-it-task-lists": "^2.1.0",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "query-string": "^5.1.0",
