--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "build-dev": "webpack --watch",
+    "build-dev": "webpack",
     "dev-server": "webpack-dev-server --open"
   },
   "keywords": [],
