--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "build-dev": "webpack",
-    "dev-server": "webpack-dev-server --open"
+    "dev-server": "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
