--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
     "highlight.js": "^9.12.0",
+    "highlightjs": "^9.10.0",
     "html-webpack-plugin": "^2.30.1",
     "lru-cache": "^4.1.1",
     "markdown-it": "^8.4.1",
     "markdown-it-footnote": "^3.0.1",
     "markdown-it-github-toc": "^3.2.4",
-    "markdown-it-highlightjs": "^3.0.0",
     "markdown-it-task-lists": "^2.1.0",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
